--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Groot || Artikelen weekly nerd</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Noto+Sans+JP:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./styles/home.css">
 </head>
+
 <body>
     <section>
-        <a href="./front-end-of-today.html">De front-end developer van vandaag</a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="./front-end-of-today.html">
+            <p>De front-end developer van vandaag</p>
+        </a>
+        <a href="./accessibility.html">
+            <p>Het web is voor iedereen, toch?</p>
+        </a>
+        <a href="./z-index.html">
+            <p>Z-index</p>
+        </a>
+        <a href="">
+            <p></p>
+        </a>
+        <a href="">
+            <p></p>
+        </a>
     </section>
 </body>
+
 </html>
