added CSS tricks article

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="./z-index.html">
             <p>Z-index</p>
         </a>
-        <a href="">
-            <p></p>
+        <a href="./tips.html">
+            <p>CSS Tips & Tricks</p>
         </a>
         <a href="">
             <p></p>
