added link to sketches

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <a href="./tips.html">
             <p>CSS Tips & Tricks</p>
         </a>
-        <a href="">
-            <p></p>
+        <a href="https://github.com/RickGroot/weekly-nerd-2021/wiki" target="_blank">
+            <p>Aantekeningen weekly nerds</p>
         </a>
     </section>
 </body>
